--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
   <body>
 
     <header class="page-header" role="banner">
+      <a class="gb_g" data-pid="23" href="https://umbrelladryeradvanced.github.io/immagini">Galleria Immagini</a>
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
