--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
   <body>
 
     <header class="page-header" role="banner">
-      <p style="text-align:center;"><a href="http://umbrelladryeradvanced.github.io/immagini">Galleria Immagini</a></p>
+      <p style="text-align:right;"><a href="http://umbrelladryeradvanced.github.io/immagini">Galleria Immagini</a></p>
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
