--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,8 +37,12 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
        <footer class="site-footer">
-         <p align="right"><a href="mailto:giorgiutti.cristian2@gmail.com"><strong>Contattaci via email</strong></a></p>
-         <p align="left"><a href="https://github.com/UmbrellaDryerAdvanced"><strong>Contattaci via GitHub</strong></a></p>
+         <table>
+           <tr>
+             <td><a href="mailto:giorgiutti.cristian2@gmail.com"><strong>Contattaci via email</strong></a></td>
+             <td><a href="https://github.com/UmbrellaDryerAdvanced"><strong>Contattaci via GitHub</strong></a></td>
+           </tr>
+         </table>
        </footer>
     </main>
   </body>
