--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,8 @@
        <footer class="site-footer">
          <table>
            <tr>
-             <td><a href="mailto:giorgiutti.cristian2@gmail.com"><strong>Contattaci via email</strong></a></td>
-             <td><a href="https://github.com/UmbrellaDryerAdvanced"><strong>Contattaci via GitHub</strong></a></td>
+             <td><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(51, 214, 127)"><strong>Contattaci via email</strong></a></td>
+             <td><a href="https://github.com/UmbrellaDryerAdvanced" style="color: rgb(51, 214, 127)"><strong>Contattaci via GitHub</strong></a></td>
            </tr>
          </table>
        </footer>
