--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,10 +37,14 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
        <footer class="site-footer">
+         <meta name="viewport" content="width=device-width, initial-scale=1">
+         <meta name="theme-color" content="#157878">
+         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+         <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
          <table>
            <tr>
-             <td><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(51, 214, 127)"><strong>Contattaci via email</strong></a></td>
-             <td><a href="https://github.com/UmbrellaDryerAdvanced" style="color: rgb(51, 214, 127)"><strong>Contattaci via GitHub</strong></a></td>
+             <td><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong>Contattaci via email</strong></a></td>
+             <td><a href="https://github.com/UmbrellaDryerAdvanced" style="color: rgb(250,255,250)"><strong>Contattaci via GitHub</strong></a></td>
            </tr>
          </table>
        </footer>
