--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,6 @@
       <p style="text-align:right;"><a href="http://umbrelladryeradvanced.github.io/immagini" style="color: rgb(250,255,250)"><font size="2">Galleria Immagini</font></a></p>
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-      {% endif %}
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
@@ -36,11 +33,7 @@
 
     <main id="content" class="main-content" role="main">
       {{ content }}
-       <footer class="site-footer">
-         <meta name="viewport" content="width=device-width, initial-scale=1">
-         <meta name="theme-color" content="#157878">
-         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-         <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+       <footer class="site-footer" role="banner">
          <table>
            <tr>
              <td><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong>Contattaci via email</strong></a></td>
