--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,8 @@
 
     <main id="content" class="main-content" role="main">
       {{ content }}
-       <footer class="site-footer" role="banner">
+       <footer class="site-footer">
+         <meta name="theme-color" content="#157878">
          <table>
            <tr>
              <td><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong>Contattaci via email</strong></a></td>
