--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
        <footer class="site-footer">
-         background: linear-gradient (120degg,#155799,#159957);
+         background: linear-gradient(120deg,#155799,#159957);
          <table>
            <tr>
              <td><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong>Contattaci via email</strong></a></td>
