--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,11 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
        <footer class="site-footer">
-         background-image: linear-gradient(120deg, #155799, #159957)
+   .page-header {
+        color: #fff;
+        background-color: #159957
+        background-image: linear-gradient(120deg, #155799, #159957)
+       }
          <table>
            <tr>
              <td><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong>Contattaci via email</strong></a></td>
