--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
-
+    <link rel="stylesheet" type="text.css" href="http://umbrelladryeradvanced.github.io/style">
     {% if site.google_analytics %}
       <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
       <script>
@@ -34,11 +34,6 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
        <footer class="site-footer">
-   .page-header {
-        color: #fff;
-        background-color: #159957
-        background-image: linear-gradient(120deg, #155799, #159957)
-       }
          <table>
            <tr>
              <td><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong>Contattaci via email</strong></a></td>
