--- a/style.css
+++ b/style.css
@@ -1,1 +1,5 @@
-a
+   .page-header {
+        color: #fff;
+        background-color: #159957
+        background-image: linear-gradient(120deg, #155799, #159957)
+       }
