--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-   .page-header {
+   .page-footer {
         color: #fff;
         background-color: #159957
         background-image: linear-gradient(120deg, #155799, #159957)
