--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
-    <link rel="stylesheet" type="text.css" href="http://umbrelladryeradvanced.github.io/style">
     {% if site.google_analytics %}
       <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
       <script>
@@ -34,12 +33,19 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
        <footer class="site-footer">
+         <div id="first"></div>
          <table>
            <tr>
              <td><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong>Contattaci via email</strong></a></td>
              <td><a href="https://github.com/UmbrellaDryerAdvanced" style="color: rgb(250,255,250)"><strong>Contattaci via GitHub</strong></a></td>
            </tr>
          </table>
+       #first{
+        color: #fff;
+        background-color: #159957;
+        background-image: linear-gradient(120deg, #155799, #159957);
+       }
+
        </footer>
     </main>
   </body>
