--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,14 @@
 
     <main id="content" class="main-content" role="main">
       {{ content }}
-       <footer class="site-footer">
+      <style>
+        footer{
+        color: #fff;
+        background-color: #159957;
+        background-image: linear-gradient(120deg, #155799, #159957);
+       }
+       </style>
+       <footer>
          <div id="first"></div>
          <table>
            <tr>
@@ -40,12 +47,6 @@
              <td><a href="https://github.com/UmbrellaDryerAdvanced" style="color: rgb(250,255,250)"><strong>Contattaci via GitHub</strong></a></td>
            </tr>
          </table>
-       #first{
-        color: #fff;
-        background-color: #159957;
-        background-image: linear-gradient(120deg, #155799, #159957);
-       }
-
        </footer>
     </main>
   </body>
