--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,8 +42,8 @@
          <div id="first"></div>
          <table>
            <tr>
-             <td><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong>Contattaci via email</strong></a></td>
-             <td><a href="https://github.com/UmbrellaDryerAdvanced" style="color: rgb(250,255,250)"><strong>Contattaci via GitHub</strong></a></td>
+             <td><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via email</font></strong></a></td>
+             <td><a href="https://github.com/UmbrellaDryerAdvanced" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via GitHub</font></strong></a></td>
            </tr>
          </table>
        </footer>
