--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,11 @@
       {{ content }}
       <style>
         footer{
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
         background-color: #159957;
         background-image: linear-gradient(120deg, #155799, #159957);
        }
