--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
       {{ content }}
       <style>
         footer{
+        position: absolute;
         left: 0;
         bottom: 0;
         width: 100%;
