--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,8 @@
         footer{
         position: absolute;
         left: 0;
+        margin: 0;
+        padding: 0;
         bottom: 0;
         width: 100%;
         text-align: center;
