--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+    <style>
+      .wrapper {
+            min-height: 100%;
+            display: grid;
+            grid-template-rows: auto 1fr auto;
+      }
+      .page-footer {
+            padding: 20px;
+      }
+    </style>
     {% if site.google_analytics %}
       <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
       <script>
@@ -36,8 +46,6 @@
         footer{
         position: absolute;
         left: 0;
-        margin: 0;
-        padding: 0;
         bottom: 0;
         width: 100%;
         text-align: center;
@@ -45,6 +53,7 @@
         background-image: linear-gradient(120deg, #155799, #159957);
        }
        </style>
+       <footer class="page-footer">Sticky footer</footer>
        <footer>
          <div id="first"></div>
          <table>
