--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,23 +33,28 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
       <style>
-        footer{
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        text-align: center;
-        background-color: #159957;
-        background-image: linear-gradient(120deg, #155799, #159957);
+        footer {
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          text-align: center;
+          background-color: #159957;
+          background-image: linear-gradient(120deg, #155799, #159957);
+        }
+        ul.lista-footer {
+           padding-left: 0;
+        }
+        ul.lista-footer li {
+          display: inline-block;
+          margin-right: 15px;      
        }
        </style>
        <footer>
          <div id="first"></div>
-         <table>
-           <tr>
-             <td><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via email</font></strong></a></td>
-             <td><a href="https://github.com/UmbrellaDryerAdvanced" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via GitHub</font></strong></a></td>
-           </tr>
-         </table>
+           <ul class="lista-footer">
+             <li><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via email</font></strong></a></li>
+             <li><a href="https://github.com/UmbrellaDryerAdvanced" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via GitHub</font></strong></a></li>
+           </ul>
        </footer>
     </main>
   </body>
