--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,9 +32,30 @@
 
     <main id="content" class="main-content" role="main">
       {{ content }}
+      
+    <div class="container">   
+    <div class="header"></div>
+    <div class="content"></div> 
+    <div id="push"></div>
+    <div class="footer"></div> 
+      
       <style>
-        footer {
+        html, body { 
+          height: 100%; margin: 0; padding: 0; 
+        }
+        .container {
+          min-height: 100%;
+          height: auto !important;
+          height: 100%;
+          margin: 0 auto -100px; 
+        }
+        #push {
+          height: 100px; 
+        }
+        .footer {
+          position: absolute;
           left: 0;
+          height: 100px; 
           bottom: 0;
           width: 100%;
           text-align: center;
