--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,7 @@
     <div class="header"></div>
     <div class="content"></div> 
     <div id="push"></div>
+      </div>
     <div class="footer"></div> 
       
       <style>
