--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,25 +33,15 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
       
-    <div class="container">   
-    <div class="header"></div>
-    <div class="content"></div> 
-    <div id="push"></div>
-      </div>
-    <div class="footer"></div> 
-      
       <style>
         html, body { 
           height: 100%; margin: 0; padding: 0; 
         }
         .container {
           min-height: 100%;
-          height: auto !important;
+          height: auto;
           height: 100%;
           margin: 0 auto -100px; 
-        }
-        #push {
-          height: 100px; 
         }
         .footer {
           position: absolute;
