--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,13 +33,20 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
       <style>
-        footer{
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        text-align: center;
-        background-color: #159957;
-        background-image: linear-gradient(120deg, #155799, #159957);
+          footer{
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          text-align: center;
+          background-color: #159957;
+          background-image: linear-gradient(120deg, #155799, #159957);
+       }
+       ul.lista-footer {
+           padding-left: 0;
+        }
+       ul.lista-footer li {
+          display: inline-block;
+          margin-right: 15px;      
        }
        </style>
        <footer>
