--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,12 +51,10 @@
        </style>
        <footer>
          <div id="first"></div>
-         <table>
-           <tr>
-             <td><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via email</font></strong></a></td>
-             <td><a href="https://github.com/UmbrellaDryerAdvanced" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via GitHub</font></strong></a></td>
-           </tr>
-         </table>
+           <ul>
+             <li><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via email</font></strong></a></li>
+             <li><a href="https://github.com/UmbrellaDryerAdvanced" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via GitHub</font></strong></a></li>
+           </ul>
        </footer>
     </main>
   </body>
