--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
        </style>
        <footer>
          <div id="first"></div>
-           <ul>
+           <ul class="lista-footer">
              <li><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via email</font></strong></a></li>
              <li><a href="https://github.com/UmbrellaDryerAdvanced" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via GitHub</font></strong></a></li>
            </ul>
