--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,8 @@
           bottom: 0;
           width: 100%;
           text-align: center;
-          background-color: #159957;
-          background-image: linear-gradient(120deg, #155799, #159957);
+          background: rgb(2,0,36);
+          background: linear-gradient(190deg, rgba(2,0,36,1) 4%, rgba(31,196,18,1) 43%, rgba(0,212,255,1) 100%);
        }
        ul.lista-footer {
            padding-left: 0;
