--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,11 +41,13 @@
         }
         ul.lista-header { 
           padding-left: 0;
+          padding-bottom: 60px;
         }
         ul.lista-header li {
           display: inline-block;
           color: #ffffff;
-          margin-right: 15px;      
+          text-align: center;
+          margin-right: 30px;      
         }
         header h1 {
           color: #ffffff;
