--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,7 @@
         header {  
           background: rgb(29,122,27);
           background: linear-gradient(191deg, rgba(29,122,27,1) 26%, rgba(31,196,18,1) 54%, rgba(0,212,255,1) 100%);
+          height: 200px;
         }
         ul.lista-header { 
           padding-left: 0;
@@ -47,7 +48,7 @@
           display: inline-block;
           color: #ffffff;
           text-align: center;
-          margin-right: 30px;      
+          margin-left: 80px;     
         }
         header h1 {
           color: #ffffff;
