--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,8 @@
       {{ content }}
       <style>
         header {  
-          background: rgb(29,122,27);
-          background: linear-gradient(191deg, rgba(29,122,27,1) 26%, rgba(31,196,18,1) 54%, rgba(0,212,255,1) 100%);
+          background: rgb(39,214,36);
+          background: linear-gradient(191deg, rgba(39,214,36,1) 24%, rgba(31,196,18,1) 37%, rgba(20,202,106,1) 47%, rgba(0,212,255,1) 67%);
           height: 200px;
         }
         ul.lista-header { 
@@ -66,8 +66,8 @@
           bottom: 0;
           width: 100%;
           text-align: center;
-          background: rgb(29,122,27);
-          background: linear-gradient(191deg, rgba(29,122,27,1) 26%, rgba(31,196,18,1) 54%, rgba(0,212,255,1) 100%);
+          background: rgb(39,214,36);
+          background: linear-gradient(191deg, rgba(39,214,36,1) 24%, rgba(31,196,18,1) 37%, rgba(20,202,106,1) 47%, rgba(0,212,255,1) 67%);
        }
        ul.lista-footer {
            padding-left: 0;
