--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
         header {  
           background: rgb(39,214,36);
           background: linear-gradient(191deg, rgba(39,214,36,1) 24%, rgba(31,196,18,1) 37%, rgba(20,202,106,1) 47%, rgba(0,212,255,1) 67%);
-          height: 200px;
+          height: 300px;
         }
         ul.lista-header { 
           padding-left: 0;
@@ -47,8 +47,8 @@
         ul.lista-header li {
           display: inline-block;
           color: #ffffff;
-          text-align: center;
-          margin-left: 80px;     
+          text-align: right;
+          margin-right: 100px;     
         }
         header h1 {
           color: #ffffff;
