--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,8 @@
       {{ content }}
       <style>
         header {  
-          background: rgb(39,214,36);
-          background: linear-gradient(191deg, rgba(39,214,36,1) 24%, rgba(31,196,18,1) 37%, rgba(20,202,106,1) 47%, rgba(0,212,255,1) 67%);
+          background: rgb(223,17,198);
+          background: linear-gradient(180deg, rgba(223,17,198,1) 11%, rgba(230,105,9,1) 49%, rgba(255,0,39,1) 82%);
           height: 250px;
         }
         ul.lista-header { 
@@ -65,8 +65,8 @@
           bottom: 0;
           width: 100%;
           text-align: center;
-          background: rgb(39,214,36);
-          background: linear-gradient(191deg, rgba(39,214,36,1) 24%, rgba(31,196,18,1) 37%, rgba(20,202,106,1) 47%, rgba(0,212,255,1) 67%);
+          background: rgb(223,17,198);
+          background: linear-gradient(180deg, rgba(223,17,198,1) 11%, rgba(230,105,9,1) 49%, rgba(255,0,39,1) 82%);
        }
        ul.lista-footer {
            padding-left: 0;
