--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@
           width: 100%;
           text-align: center;
           background: rgb(223,17,198);
-          background: linear-gradient(180deg, rgba(223,17,198,1) 11%, rgba(230,105,9,1) 49%, rgba(255,0,39,1) 82%);
+          background: linear-gradient(180deg, rgba(223,17,198,1) 32%, rgba(255,0,39,1) 72%);
        }
        ul.lista-footer {
            padding-left: 0;
