--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
     <header>
      <ul class="lista-footer">
-      <li style="text-align:right;"><a href="http://umbrelladryeradvanced.github.io/immagini" style="color: rgb(250,255,250)"><font size="2">Galleria Immagini</font></a></li>
+      <li><a href="http://umbrelladryeradvanced.github.io/immagini">Galleria Immagini</a></li>
      </ul>
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
@@ -48,6 +48,7 @@
           display: inline-block;
           color: #ffffff;
           text-align: right;   
+          font-size: 2px;
         }
         header h1 {
           color: #ffffff;
