--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,13 +42,16 @@
         }
         ul.lista-header { 
           padding-left: 0;
-          padding-bottom: 60px;
         }
         ul.lista-header li {
           display: inline-block;
+        }
+        ul.lista-header li a {
+          text-;
           color: #ffffff;
           text-align: right;   
           font-size: 2px;
+          margin-left: 30px;
         }
         header h1 {
           color: #ffffff;
