--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,11 +47,10 @@
           display: inline-block;
         }
         ul.lista-header li a {
-          text-;
           color: #ffffff;
           text-align: right;   
           font-size: 2px;
-          margin-left: 30px;
+          margin-right: 30px;
         }
         header h1 {
           color: #ffffff;
