--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
     <header>
      <ul class="lista-footer">
-      <li><a href="http://umbrelladryeradvanced.github.io/immagini">Galleria Immagini</a></li>
+      <li><a href="http://umbrelladryeradvanced.github.io/immagini">Immagini</a></li>
      </ul>
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
