--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,15 +41,18 @@
           height: 250px;
         }
         ul.lista-header { 
-          padding-left: 0;
+          padding-right: 0;
         }
         ul.lista-header li {
           display: inline-block;
-          color: #ffffff;
-          text-align: right;   
-          font-size: 2px;
-          margin-right: 30px;
         }
+        ul.lista-header a {
+        display: inline-block;
+        color: #ffffff;
+        text-align: right;   
+        font-size: 2px;
+        }
+        
         header h1 {
           color: #ffffff;
           text-transform: uppercase;
