--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,12 +44,11 @@
           padding-right: 0;
         }
         ul.lista-header li {
+          float: right;
           display: inline-block;
         }
-        ul.lista-header a {
-        display: inline-block;
-        color: #ffffff;
-        text-align: right;   
+        ul.lista-header li a {
+        color: #ffffff; 
         font-size: 2px;
         }
         
