--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
     <header>
      <ul class="lista-footer">
-      <li><a href="http://umbrelladryeradvanced.github.io/immagini" style="color: rgb(250,255,250); margin-left: 150px;"><strong><font size="2">Immagini</font></strong></a></li>
+      <li><a href="http://umbrelladryeradvanced.github.io/immagini" style="color: rgb(250,255,250); margin-left: 125px; margin-top: 30px"><strong><font size="2">Immagini</font></strong></a></li>
      </ul>
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
