--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
     <header>
      <ul class="lista-footer">
-      <li><a href="http://umbrelladryeradvanced.github.io/immagini" style="color: rgb(250,255,250); margin-left: 125px><strong><font size="2">Immagini</font></strong></a></li>
+      <li><a href="http://umbrelladryeradvanced.github.io/immagini" style="color: rgb(250,255,250); margin-left: 150px><strong><font size="2">IMMAGINI</font></strong></a></li>
      </ul>
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
@@ -76,7 +76,7 @@
        <footer>
          <div id="first"></div>
            <ul class="lista-footer">
-             <li><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via email</font></strong></a></li>
+             <li><a href="mailto:giorgiutti.cristian2@gmail.com" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via Email</font></strong></a></li>
              <li><a href="https://github.com/UmbrellaDryerAdvanced" style="color: rgb(250,255,250)"><strong><font size="2">Contattaci via GitHub</font></strong></a></li>
            </ul>
        </footer>
