--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,7 @@
           background: rgb(223,17,198);
           background: linear-gradient(180deg, rgba(223,17,198,1) 11%, rgba(230,105,9,1) 49%, rgba(255,0,39,1) 82%);
           height: 250px;
+          margin-top: 0px;
         }
         ul.lista-header { 
           padding-left: 0;
