--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,9 @@
 
 {% seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="##ff0000">
-    <meta name="msapplication-navbutton-color" content="#ff0000">
-    <meta name="apple-mobile-web-app-status-bar-style" content="##ff0000">
+    <meta name="theme-color" content="##ffffff">
+    <meta name="msapplication-navbutton-color" content="#ffffff">
+    <meta name="apple-mobile-web-app-status-bar-style" content="##ffffff">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
