--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,13 @@
     <meta name="msapplication-navbutton-color" content="#ffffff">
     <meta name="apple-mobile-web-app-status-bar-style" content="##ffffff">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    
+    .htaccess
+    ErrorDocument 404 /missing.shtml
+    missing.shtml [code] Not found [/code] :cool: [url=http://openvein.org/]openvein.org[/url] -//-
+    
   </head>
+  
   <body>
 
     <header>
