--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ ul.lista-header li a {
   font-size: 3;
 }
 header h1 {
+  color: #ffffff;
   text-transform: uppercase;
   text-align: center;
   font-size: 2.25rem;
